<resources>
    <string name="app_name">ChatApp</string>
    <string name="create_account">Create new account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Log Out</string>
    <string name="all_users">All Users</string>
    <string name="create_new_acc">Creating a new account</string>
    <string name="welcome_message">Welcome to my Chat App</string>
    <string name="log_in">Log In</string>
    <string name="login_acc">Log in to your account</string>
    <string name="profile_picture">Profile picture</string>
    <string name="display_name">Display Name</string>
    <string name="using_chatapp">Using ChatApp</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="settings">Settings</string>
    <string name="user_status">User status</string>
    <string name="send_a_message">Send a message</string>
    <string name="send_message">Send message</string>
</resources>