<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_single_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_single_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/user_single_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_single_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/user_status"
        app:layout_constraintStart_toEndOf="@+id/user_single_image"
        app:layout_constraintTop_toBottomOf="@+id/user_single_name" />

</androidx.constraintlayout.widget.ConstraintLayout>